# kdi_back

./: .ebignore  .gitignore  DISEÑO_PERFIL_JUGADOR.md  GUIA_FUNCIONES_LOGICAS.md  README.md  RESUMEN.md  agent_golf.py  agent_weather.py  app.py  application.py  config.py  pyproject.toml  requirements.txt
.ebextensions/: 01_python.config  02_packages.config  03_environment.config  04_postgis.config  05_migrations.config
docs/: ANALISIS_DOMINIOS_FUNCIONALIDADES.md  ANALISIS_ENDPOINT_VOZ_PARTIDO.md  ANALISIS_RED_SOCIAL_JUGADORES.md  ANALISIS_VALIDACION_GPS.md  CODIGO_LEGACY_ELIMINADO.md  CONFIGURAR_SECURITY_GROUP_RDS.md  CORRECCION_GPS_DESCRIPCION.md  DESPLIEGUE_AWS.md  DISPONIBILIDAD_PARAMETROS_VOICE_COMMAND.md  EJEMPLO_SIMULACION_RECOMENDACION.md  ENDPOINTS.md  ENRUTAMIENTO_BACKEND.md  FLUJO_COMUNICACION_FRONTEND_BACKEND.md  FLUJO_CONVERSACION_CONFIRMACION_HOYOS.md  FLUJO_RECOMENDACION_GOLPEO_EVALUACION.md  IMPLEMENTACION_ENDPOINT_VOZ.md  PROPUESTA_PARTIDOS.md  QUÉ_ES_UN_STROKE.md  RESUMEN_IMPLEMENTACION_GPS.md  RESUMEN_LOGICA_NEGOCIO.md  RESUMEN_VALIDACION_GPS.md  SIMULACION_HOYO1_LAS_REJAS.md  SIMULACION_PARTIDO_COMPLETO_LAS_REJAS.md  SIMULACION_PARTIDO_INTERMEDIO_LAS_REJAS.md  SIMULACION_PARTIDO_PROFESIONAL_LAS_REJAS.md  SOLUCION_504.md  SOLUCION_PERMISOS_BEDROCK.md  VALIDACION_EVALUACION_GOLPES.md
scripts/: CAMPOS_AWS.md  deploy_aws.ps1  deploy_aws.sh  generate_golf_config_from_info.py  run_all_migrations.py  run_campos_aws.ps1  run_campos_aws.py  run_dev.py  setup_rds_postgis.py  test_rds_connection.py  verificar_conexion_rds.ps1
tests/: __init__.py
(+85 files in other folders)
